Kubernetecs/Ambel/Microservice New forntend/static-frontend-stage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-frontend-service
  namespace: test
  labels:
    app: static-frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-frontend-service
  template:
    metadata:
      labels:
        app: static-frontend-service
    spec:
      containers:
      - name: static-frontend-service
        image: tazul96/ambel:Pro-static-F-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
      imagePullSecrets:
        - name: dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: static-frontend-service
  namespace: test
spec:
  ports:
  - port: 80
    targetPort: 3002
  selector:
    app: static-frontend-service
  type: ClusterIP
